log/build_2024-08-24_12-28-37/GUI/stderr.log
  File "/home/arno/RoombaV2CS/install/GUI/lib/python3.10/site-packages/GUI/gui.py", line 154
    img = Image.fromarray(
                         ^
SyntaxError: '(' was never closed

